# Spool

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: style.css
configs/: params.yaml  prompts.yaml
src/exception/: __init__.py
src/infra/: config.py
src/logger/: __init__.py
src/spool/data/: loader.py  splitter.py  store.py
src/spool/llm/: model.py  prompt_generator.py  retriever.py
src/ui/: components.py  core.py
