[project]
name = "spool"
version = "0.1.0"
description = "Spool - LangChain based Agentic Chatbot for YouTube"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "colorlog>=6.10.1",
    "langchain>=1.3.14",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-text-splitters",
    "python-dotenv",
    "rank-bm25",
    "streamlit",
    "youtube-transcript-api",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "spool",
]

[tool.ruff.lint]
ignore = ["I001", "SIM117", "BLE001", "UP006", "UP035", "F401", "F841"]
